Working on parent page, need to fix floating and overlaping

--- a/styles/parentHome.css
+++ b/styles/parentHome.css
@@ -14,3 +14,94 @@ header
     background-size: cover;
     background-position: center;
 }
+
+.main-nav
+{
+float: left;
+list-style: none;
+margin-top: 30px;
+padding-left: 100px; 
+}
+
+.main-nav li
+{
+    display: inline-block;
+}
+.main-nav li a
+{
+color: white;
+text-decoration: none;
+padding: 5px 20px; 
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 20px;
+}
+
+.main-nav li.active a
+{
+border: 1px solid white;
+}
+
+.main-nav li a:hover
+{
+border: 1px solid white;
+}
+
+.logo img
+{
+width: 150px; 
+height: auto;
+float: left;
+margin-top: 30px;
+padding-left: 15px;
+}
+
+body
+{
+    font-family: monospace;
+}
+
+.row
+{
+    max-width: 1800px; 
+    margin: auto;
+}
+
+.userName
+{
+    float: right;
+    height: 150px;
+    margin-top: 30px;
+    padding-right: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: white;
+}
+.btn
+{
+    border-style: solid white;
+    padding-left: 5px 20px;
+    float: right;
+    height: 150px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.btn signOutBtn
+{
+    border-style: solid;
+    background-color: black;
+    color: black;
+}
+
+body
+{
+float: auto;
+list-style: none;
+align-self: center;
+}
+
+.messageBox
+{
+    border: 15px 15px 15px 15px;
+}
